syntax = "proto3";


option java_multiple_files = true;
option java_package = "com.github.veerdone.yblog.cloud.base.api";

message IncrOrDecrColumnReq {
  int64 itemId = 1;
  string column = 2;
  int32 num = 3;
}

message IncrOrDecrColumnResp {}